# demonstrateur_grosse_conf

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  PRESENTATION.md  README.md  justfile  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
config/: config.json
docs/: ARTICLE_BLOG_OCTO.md  DEMO_finale.docx  DEMO_finale.html  DEMO_finale.md  DEMO_new_instructions.md  generate_demo_pdf.py
examples/: README.md
src/: __init__.py  main.py  pipeline.py
src/chains/: __init__.py  configuration.py  llm_chain.py  prompts.py
src/chains/schemas/: __init__.py  kyc_schemas.py
src/utils/: __init__.py  config.py
tests/: test_schemas.py
